testdata/authpolicy-basic/deployment/uncovered-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: admin-route
spec:
  parentRefs:
    - name: default-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /admin
      backendRefs:
        - name: admin-server
          port: 8080
